objects/vlocity_cmt__OfferPricingComponent__c.object
<CustomObject>
    <description>DEPRECATED. Use Price List Entries.</description>
    <fields>
        <fullName>AlterationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alteration</label>
        <referenceTo>vlocity_cmt__PricingComponent__c</referenceTo>
        <relationshipLabel>Offer Pricing Components (Pricing Component)</relationshipLabel>
        <relationshipName>OfferPricingComponentsAlteration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlterationTimePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alteration Time Plan</label>
        <referenceTo>TimePlan__c</referenceTo>
        <relationshipLabel>Offer Pricing Components</relationshipLabel>
        <relationshipName>OfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeEvent__c</fullName>
        <label>Charge Event</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfferPath__c</fullName>
        <label>Offer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offer Pricing Components</relationshipLabel>
        <relationshipName>OfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Offer Pricing Components</relationshipLabel>
        <relationshipName>OfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MatrixBinding__c</fullName>
        <label>Matrix Binding</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offer Pricing Components</relationshipLabel>
        <relationshipName>OfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingComponentId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Component</label>
        <referenceTo>vlocity_cmt__PricingComponent__c</referenceTo>
        <relationshipLabel>Offer Pricing Components</relationshipLabel>
        <relationshipName>OfferPricingComponents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootOfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offer Pricing Components (Root Offer)</relationshipLabel>
        <relationshipName>RootOfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Offer Pricing Component</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__ContextContractId__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__RootOfferId__c</columns>
        <columns>vlocity_cmt__OfferId__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__IsOverride__c</columns>
        <columns>vlocity_cmt__PricingComponentId__c</columns>
        <columns>vlocity_cmt__EffectiveStartDate__c</columns>
        <columns>vlocity_cmt__EffectiveEndDate__c</columns>
        <columns>vlocity_cmt__ContextAccountId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offer Pricing Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Pricing Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>